--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">NotecardGame</string>
+    <string name="stack_file_name">stacks</string>
     <string name="action_settings">Settings</string>
+    <string name="selection_delete">Delete</string>>
     <string name="add_stack">Enter a new Stack name:</string>
     <string-array name="main_menu">
         <item>Your Notecards</item>
