--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">NotecardGame</string>
-    <string name="stack_file_name">stacks</string>
+    <string name="stack_file_name">notecards</string>
     <string name="new_line">\n</string>
     <string name="action_settings">Settings</string>
     <string name="selection_delete">Delete</string>>
     <string name="add_stack">Enter a new Stack name:</string>
+    <string name="add_notecard">New Notecard:</string>
     <string-array name="main_menu">
         <item>Your Notecards</item>
         <item>Quiz!</item>
