--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
+    <!-- App Name -->
     <string name="app_name">NotecardGame</string>
-    <string name="stack_file_name">notecards</string>
-    <string name="new_line">\n</string>
-    <string name="action_settings">Settings</string>
-    <string name="selection_delete">Delete</string>>
-    <string name="add_stack">Enter a new Stack name:</string>
-    <string name="add_notecard">New Notecard:</string>
-    <string-array name="main_menu">
+
+    <!-- File Names -->
+    <string name="filename_stacks">notecards</string>
+
+    <!-- Literal Strings -->
+    <string name="literal_addstack">Enter a new Stack name:</string>
+    <string name="literal_addnotecard">New Notecard:</string>
+    <string name="literal_newline">\n</string>
+    <string name="literal_deleteselection">Delete</string>>
+    <string name="literal_settings">Settings</string>
+
+    <!-- Literal String Arrays -->
+    <string-array name="menu_main">
         <item>Your Notecards</item>
         <item>Quiz!</item>
     </string-array>
