added flip notecard feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- App Name -->
-    <string name="app_name">NotecardGame</string>
+    <string name="app_name">Notecard.study</string>
 
     <!-- File Names -->
     <string name="filename_stacks">notecards</string>
@@ -14,7 +14,7 @@
 
     <!-- Literal String Arrays -->
     <string-array name="menu_main">
-        <item>Your Notecards</item>
+        <item>Your Notecard Stacks</item>
         <item>Quiz!</item>
     </string-array>
 </resources>
