--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,13 @@
     <!-- Toolbar Titles -->
     <string name="title_stacks">Notecard Stacks</string>
     <string name="title_notecards">\u0020Notecards</string>
+    <string name="title_notecard">Notecard</string>
 
     <!-- Fragment Tags -->
     <string name="tag_dialog">dialog</string>
 
     <!-- Bundle Keys -->
-
+    <string name="bundle_json">json</string>
 
     <!-- Literal Strings -->
     <string name="literal_addstack">Create new Stack:</string>
@@ -24,9 +25,11 @@
     <string name="literal_settings">Settings</string>
     <string name="literal_positive">Ok</string>
     <string name="literal_negative">Cancel</string>
-    <string name="literal_stacknamehint">New name</string>
-    <string name="literal_fronthint">New front</string>
-    <string name="literal_backhint">New back</string>
+    <string name="literal_stacknamehint">Name</string>
+    <string name="literal_fronthint">Front</string>
+    <string name="literal_backhint">Back (Optional)</string>
+    <string name="literal_front">Front</string>
+    <string name="literal_back">Back</string>
 
     <!-- Literal String Arrays -->
     <string-array name="menu_main">
