--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,19 +15,30 @@
 
     <!-- Bundle Keys -->
     <string name="bundle_json">json</string>
+    <string name="bundle_name">name</string>
+
+    <!-- Dialog Strings -->
+    <string name="dialog_positive">Ok</string>
+    <string name="dialog_negative">Cancel</string>
+    <string name="dialog_addstack">Create new Stack:</string>
+    <string name="dialog_addnotecard">Create new Notecard:</string>
+    <string name="dialog_stacknamehint">Name</string>
+    <string name="dialog_fronthint">Front</string>
+    <string name="dialog_backhint">Back (Optional)</string>
+
+    <!-- Dialog Error Messages -->
+    <string name="dialog_error_missingname">Enter stack name</string>
+    <string name="dialog_error_missingfront">Please enter front of notecard</string>
+    <string name="dialog_error_existstack">Stack name already exists</string>
+    <string name="dialog_error_existnotecard">Notecard already exists</string>
+
+    <!-- Multiselect Strings -->
+    <string name="multi_deleteselection">Delete</string>>
+    <string name="multi_amountselected">\u0020Selected</string>
 
     <!-- Literal Strings -->
-    <string name="literal_addstack">Create new Stack:</string>
-    <string name="literal_addnotecard">Create new Notecard:</string>
     <string name="literal_newline">\n</string>
-    <string name="literal_deleteselection">Delete</string>>
-    <string name="literal_amountselected">\u0020Selected</string>
     <string name="literal_settings">Settings</string>
-    <string name="literal_positive">Ok</string>
-    <string name="literal_negative">Cancel</string>
-    <string name="literal_stacknamehint">Name</string>
-    <string name="literal_fronthint">Front</string>
-    <string name="literal_backhint">Back (Optional)</string>
     <string name="literal_front">Front</string>
     <string name="literal_back">Back</string>
 
