made more polymorphic, added swap feature, combined click listeners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,8 @@
     <string name="dialog_error_existnotecard">Notecard already exists</string>
 
     <!-- Multiselect Strings -->
-    <string name="multi_deleteselection">Delete</string>>
+    <string name="multi_deleteselection">Delete</string>
+    <string name="multi_swapselection">Swap</string>
     <string name="multi_amountselected">\u0020Selected</string>
 
     <!-- Literal Strings -->
